--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
-    
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
